Use .get(0) instead of getFirst() (not available in the corresponding JDK on 8.x)